# clone-coding-task

./: README.md  docker-compose.yml
back/: Dockerfile  manage.py  pyproject.toml
back/app/: main.py  models.py
back/cloneback/: asgi.py  settings.py  urls.py  wsgi.py
front/: Dockerfile  index.html  package-lock.json  package.json
front/src/: App.tsx  index.css  schemas.ts  types.ts
front/src/components/: ControlPanel.tsx  Logs.tsx  Robot.tsx  RobotData.tsx
front/src/components/utils/: Box.tsx  Pill.tsx
