[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["dominik.kielbowicz <dominik.kielbowicz19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.12"}
poethepoet = "^0.33.1"
websockets = "^15.0.1"
pydantic = "^2.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
run = "poetry run fastapi dev main.py"